[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/Panel.png" type="Texture" id=2]
[ext_resource path="res://fonts/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/GoldenArrow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -522.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
texture = ExtResource( 2 )
centered = false

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -487.0
margin_top = 25.0
margin_right = -273.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE: 0"
valign = 1
uppercase = true

[node name="Stage" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 25.0
margin_right = 164.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stage 1"
valign = 1
uppercase = true

[node name="FruitCount" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 263.0
margin_top = 25.0
margin_right = 477.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fruit x 1"
align = 2
valign = 1
uppercase = true

[node name="ArrowBase" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 690, 40 )
rotation = 4.71239
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )

[node name="GoldenArrowBase" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 702.602, 40.6147 )
rotation = 4.71239
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 5 )

[node name="ArrowContainer" type="Node" parent="CanvasLayer"]
